Modulo de escalas de acolitos adicionado

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-ftp": "^3.31",
-        "league/flysystem-sftp-v3": "^3.31"
+        "league/flysystem-sftp-v3": "^3.31",
+        "twilio/sdk": "^8.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
