--- a/package.json
+++ b/package.json
@@ -8,15 +8,28 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@types/react": "^19.2.10",
+        "@types/react-big-calendar": "^1.16.3",
+        "@types/react-dom": "^19.2.3",
+        "@vitejs/plugin-react": "^5.1.3",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
+        "typescript": "^5.9.3",
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@headlessui/react": "^2.2.9",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.8",
-        "sass": "^1.97.3"
+        "clsx": "^2.1.1",
+        "date-fns": "^2.30.0",
+        "lucide-react": "^0.563.0",
+        "react": "^19.2.4",
+        "react-big-calendar": "^1.19.4",
+        "react-dom": "^19.2.4",
+        "sass": "^1.97.3",
+        "tailwind-merge": "^3.4.0"
     }
 }
