--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "typescript": "^5.9.3",
-        "vite": "^7.0.7"
+        "vite": "^7.0.7",
+        "vite-plugin-full-reload": "^1.2.0"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.9",
