--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/tinker": "^2.10.1",
         "league/flysystem-ftp": "^3.31",
         "league/flysystem-sftp-v3": "^3.31",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.6",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "twilio/sdk": "^8.10"
     },
