--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.6",
         "simplesoftwareio/simple-qrcode": "^4.2",
+        "symfony/brevo-mailer": "^8.0",
+        "symfony/http-client": "^8.0",
         "twilio/sdk": "^8.10"
     },
     "require-dev": {
